--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ on:
       - main
   pull_request:
     paths:
+      - pyproject.toml
+      - uv.lock
       - setup.py
       - tests/**
       - safepo/**
@@ -37,19 +39,20 @@ jobs:
           submodules: "recursive"
           fetch-depth: 1
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          version: "latest"
+          enable-cache: true
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          update-environment: true
-
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip setuptools
 
       - name: Install SafePO
         run: |
-          python -m pip install -vvv -e '.[test]'
+          uv sync --group dev
 
       - name: Test with pytest
         run: |
