--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ keywords = [
 ]
 readme = "README.md"
 license = { text = "Apache License 2.0" }
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -38,16 +38,19 @@ classifiers = [
 dependencies = [
     "joblib",
     "scipy",
-    "torch>=1.10.0,<2.5.0",
+    "torch>=2.0.0",
     "tensorboard>=2.8.0",
     "wandb>=0.13.0",
     "pyyaml>=6.0",
     "matplotlib>=3.7.1",
     "seaborn>=0.12.2",
     "pandas>=1.5.3",
-    "safety-gymnasium",
+    "safety-gymnasium @ git+https://github.com/PKU-Alignment/safety-gymnasium.git@v1.2.0",
     "rich>=13.3.0",
     "moviepy>=1.0.3",
+    "imageio>=2.0.0",
+    "imageio-ffmpeg>=0.4.0",
+    "tqdm>=4.65.0",
 ]
 
 [project.optional-dependencies]
@@ -115,7 +118,7 @@ profile = "black"
 line_length = 100
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
