--- a/safepo/multi_agent/marl_cfg/macpo/config.yaml
+++ b/safepo/multi_agent/marl_cfg/macpo/config.yaml
@@ -11,9 +11,15 @@ hidden_size: 512
 use_render: False
 recurrent_N: 1
 
+# Video recording settings
+use_wandb: True
+wandb_project: safepo
+record_video: True
+video_record_freq: 1  # Record video on first eval episode only
+
 save_interval: 1
-use_eval: False
-eval_interval: 25
+use_eval: True
+eval_interval: 2
 log_interval: 25
 eval_episodes: 10000
 
