--- a/safepo/multi_agent/marl_cfg/mappolag/config.yaml
+++ b/safepo/multi_agent/marl_cfg/mappolag/config.yaml
@@ -12,9 +12,15 @@ use_render: False
 recurrent_N: 1
 use_single_network: False
 
+# Video recording settings
+use_wandb: True
+wandb_project: safepo
+record_video: True
+video_record_freq: 1  # Record video on first eval episode only
+
 save_interval: 1
-use_eval: False
-eval_interval: 25
+use_eval: True
+eval_interval: 2
 log_interval: 25
 eval_episodes: 10000
 
